--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.51.4",
     "react-redux": "^9.1.2",
     "sonner": "^1.4.41",
+    "sweetalert2": "^11.10.8",
     "zod": "^3.23.6"
   },
   "devDependencies": {
